Display sidebar only for non login controllers 	modified:   application/Bootstrap.php    - Added initDoctype function 	modified:   application/configs/application.ini    - Added resource.View[] 	modified:   application/layouts/scripts/layout.phtml    - call for sidebar.html 	modified:   application/views/scripts/auth/login.phtml    - Added 'welcome to readytoserve pos heading' 	new file:   application/views/scripts/sidebar.phtml    - placed sidebar script in separate file 	modified:   public/index.php    - removed call to authcontroller

--- a/Ready2Serve/application/views/scripts/auth/login.phtml
+++ b/Ready2Serve/application/views/scripts/auth/login.phtml
@@ -24,10 +24,14 @@
     </head>
 
     <body>
+        <div align="center">
+            <h1>Welcome To Ready2Serve POS</h1>
 
+        </div>
         <div class="container">
-
+ 
             <form class="form-signin" role="form">
+               
                 <h2 class="form-signin-heading">Please sign in</h2>
                 <input type="text" class="form-control" placeholder="Username" required autofocus>
                 <input type="password" class="form-control" placeholder="Password" required>
