--- a/Ready2Serve/application/views/scripts/auth/index.phtml
+++ b/Ready2Serve/application/views/scripts/auth/index.phtml
@@ -1,4 +1,4 @@
 <br /><br />
 <div id="view-content">
-	<p>View script for controller <b>Auth</b> and script/action name <b>index</b></p>
+	<p style="margin: 1px 250px 10px;">View script for controller <b>Auth</b> and script/action name <b>index</b></p>
 </div>
