Add Login Functionality 	modified:   .zfproject.xml    - New Form Added 	modified:   application/configs/application.ini    - Database settings Added 	modified:   application/controllers/AuthController.php    - Defined login Action 	new file:   application/forms/Login.php    - Added login Form 	modified:   application/layouts/scripts/layout.phtml 	modified:   application/views/scripts/auth/login.phtml    - Called login form

--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -46,8 +46,11 @@
       </div>
     </div>
 
-    <?php echo $this->layout()->sidebar; ?>
-
+        <?php
+      //  if(Zend_Auth::getInstance()->hasIdentity()){
+        $this->render('sidebar.phtml');
+       // }?>
+        
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
