--- a/Ready2Serve/application/views/scripts/auth/login.phtml
+++ b/Ready2Serve/application/views/scripts/auth/login.phtml
@@ -26,7 +26,7 @@
     <body>
         <div align="center">
             <h1>Welcome To Ready2Serve POS</h1>
-
+   
         </div>
         <div class="container">
  
@@ -34,10 +34,11 @@
                
                 <h2 class="form-signin-heading">Please sign in</h2>
                 <input type="text" class="form-control" placeholder="Username" required autofocus>
-                <input type="password" class="form-control" placeholder="Password" required>
+                <input type="password" class="form-control" placeholder="Password" required>        
                 <label class="checkbox">
                 </label>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>             
+             <?php echo $this->form->setAction($this->url()); ?>
             </form>
 
         </div> <!-- /container -->
