--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -50,10 +50,11 @@
         <?php
       //  if(Zend_Auth::getInstance()->hasIdentity()){
         
-        <?php echo $this->layout()->content; ?>
-        //$this->render('sidebar.phtml');
-       // }?>
-
+        echo $this->layout()->content; 
+        //}
+        ?>
+       
+        
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
