Add Role of Logged in User in Zend Registry Class 	modified:   application/controllers/AuthController.php 	modified:   application/layouts/scripts/layout.phtml 	new file:   application/views/scripts/loginDecorator.phtml 	modified:   library/Zend/Auth/Adapter/DbTable.php 	modified:   public/index.php

--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -46,12 +46,11 @@
             </div>
         </div>
 
-    <?php echo $this->layout()->sidebar; ?>
+    <?php echo $this->layout()->content; ?>
         <?php
-      //  if(Zend_Auth::getInstance()->hasIdentity()){
-        
-        echo $this->layout()->content; 
-        //}
+        if(Zend_Auth::getInstance()->hasIdentity()){
+            echo $this->render('sidebar.phtml');
+        }
         ?>
        
         
