Add User Type Specific Login & Order Controller 	modified:   .zfproject.xml     - New Controller Created 	modified:   application/controllers/AuthController.php     - Added Person type specific login 	new file:   application/controllers/OrderController.php     - Newly Created Controller 	modified:   application/layouts/scripts/layout.phtml     - Added Condition if controller is auth then do not show sidebar 	modified:   application/layouts/scripts/sidebar.phtml     - Added 'Manage Products Option' 	modified:   application/views/scripts/auth/login.phtml     - Removed extra username and password fields 	new file:   application/views/scripts/order/index.phtml     - Index view script of Order Controller 	new file:   application/views/scripts/order/place-order.phtml     - Newly created view script 	modified:   application/views/scripts/product/view-all-orders.phtml     - Updated View All orders view script

--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -46,14 +46,17 @@
             </div>
         </div>
 
-    <?php echo $this->layout()->content; ?>
         <?php
-        if(Zend_Auth::getInstance()->hasIdentity()){
-            echo $this->render('sidebar.phtml');
+        if (Zend_Controller_Front::getInstance()->getRequest()
+                        ->getControllerName() != 'Auth') {
+            if (Zend_Auth::getInstance()->hasIdentity()) {
+                echo $this->render('sidebar.phtml');
+            }
         }
+        echo $this->layout()->content;
         ?>
-       
-        
+
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
