--- a/Ready2Serve/application/layouts/scripts/sidebar.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar.phtml
@@ -2,9 +2,11 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">Overview</a></li>
+            <li class="active"><a href="#">View Orders</a></li>
             <li><a href="#">Edit Account Info</a></li>
+            <li><a href="#">Manage Product</a></li>
           </ul>
+           
         </div>
        
       </div>
