--- a/Ready2Serve/application/views/scripts/auth/login.phtml
+++ b/Ready2Serve/application/views/scripts/auth/login.phtml
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="icon" href="../../favicon.ico">
 
-        <title>Signin</title>
+        <title>Log in</title>
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -26,19 +26,19 @@
     <body>
         <div align="center">
             <h1>Welcome To Ready2Serve POS</h1>
-         <?php echo $this->form->setAction($this->url()); ?>
-       
+       <?php echo $this->form->setAction($this->url()); ?>
         </div>
         <div class="container">
  
             <form class="form-signin" role="form">
-               
-                <h2 class="form-signin-heading">Please sign in</h2>
-                <input type="text" class="form-control" placeholder="Username" required autofocus>
+                 
+       
+                <!--<h2 class="form-signin-heading">Please sign in</h2>-->
+<!--                <input type="text" class="form-control" placeholder="Username" required autofocus>
                 <input type="password" class="form-control" placeholder="Password" required>        
                 <label class="checkbox">
                 </label>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>             
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>             -->
             </form>
 
         </div> <!-- /container -->
