--- a/Ready2Serve/application/views/scripts/product/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/product/view-all-orders.phtml
@@ -1,4 +1,41 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Product</b> and script/action name <b>viewAllOrders</b></p>
-</div>
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="../../favicon.ico">
+
+        <title>View All Orders</title>
+
+        <!-- Bootstrap core CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <!-- Custom styles for this template -->
+        <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
+        <!-- Latest compiled and minified CSS -->
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+        <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+    </head>
+
+    <body>
+      
+        <div class="form-signin">
+    
+                <p>testing</p>
+              
+           
+
+        </div> <!-- /container -->
+
+
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
+</html>
+
