Add View All Orders 	modified:   .zfproject.xml   - New Model Added 	modified:   application/controllers/AuthController.php

--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -48,7 +48,9 @@
 
         <?php
         if (Zend_Controller_Front::getInstance()->getRequest()
-                        ->getControllerName() != 'Auth') {
+                        ->getControllerName() != 'Auth' &&
+                Zend_Controller_Front::getInstance()->getRequest()
+                        ->getControllerName() != 'auth') {
             if (Zend_Auth::getInstance()->hasIdentity()) {
                 echo $this->render('sidebar.phtml');
             }
