Adjust View All Order view Script 	modified:   application/controllers/AuthController.php 	modified:   application/controllers/OrderController.php 	modified:   application/views/scripts/order/view-all-orders.phtml

--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -1,85 +1,51 @@
 <br /><br />
 <div id="view-content">
 
+    <title>View All Orders</title>
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
+    <div class="container" align="center">
 
-        <title>Log in</title>
 
-        <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <!-- Custom styles for this template -->
-        <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
-        <!-- Latest compiled and minified CSS -->
+        <?php if ($this->names): ?>
+ <table class="table table-striped">
+              <thead>
+                <tr>
+                   <th>Salesman Name</th>
+                    <th>Order ID</th>
+                    <th>Product Description</th>
+                    <th>Unit Price</th>
+                    <th>Quantity</th>
+                    <th>Date</th>
+                    <th>Discount</th>
+                    <th>Amount</th>
+                </tr>
+              </thead>
+              <tbody>      
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <?php foreach ($this->names as $key => $val): ?>
+                    <tr>
+                        <td><?php echo $this->escape($val['name']) ?></td>
+                        <td><?php echo $this->escape($val['order_id']) ?></td>
+                        <td><?php echo $this->escape($val['product_description']) ?></td>
+                        <td><?php echo $this->escape($val['unit_price']) ?></td>
+                        <td><?php echo $this->escape($val['quantity']) ?></td>
+                        <td><?php echo $this->escape($val['order_datetime']) ?></td>
+                        <td><?php echo $this->escape($val['discount']) ?></td>
+                        <td><?php echo $this->escape($val['Amount']) ?></td>
+                    </tr>
+    <?php endforeach; ?>
 
-        <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
-    </head>
-
-    <body>
-        <div align="center">
           
-     
-        </div>
-        <div class="container">
- 
-            <form class="form-signin" role="form">
-                 <?php 
+         </tbody>
+            </table>
 
-if ($this->names): ?>
- 
-    <!-- A table of some books. -->
-    <table>
-        <tr>
-            <th>Salesman Name</th>
-            <th>Order ID</th>
-            <th>Product Description</th>
-            <th>Unit Price</th>
-            <th>Quantity</th>
-            <th>Date</th>
-            <th>Discount</th>
-            <th>Amount</th>
-        </tr>
- 
-        <?php foreach ($this->names as $key => $val): ?>
-        <tr>
-            <td><?php echo $this->escape($val['name']) ?></td>
-            <td><?php echo $this->escape($val['order_id']) ?></td>
-            <td><?php echo $this->escape($val['product_description']) ?></td>
-            <td><?php echo $this->escape($val['unit_price']) ?></td>
-            <td><?php echo $this->escape($val['quantity']) ?></td>
-            <td><?php echo $this->escape($val['order_datetime']) ?></td>
-            <td><?php echo $this->escape($val['discount']) ?></td>
-            <td><?php echo $this->escape($val['Amount']) ?></td>
-        </tr>
-        <?php endforeach; ?>
- 
-    </table>
- 
 <?php else: ?>
- 
-    <p>There are no Orders to display.</p>
- 
-<?php endif;?>
-   
-</div>
-       
-            </form>
 
-        </div> <!-- /container -->
+            <p>There are no Orders to display.</p>
 
+<?php endif; ?>
 
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
-</html>
+    </div> <!-- /container -->
+
+</body>
+
