commit include changes below: - action add editaccountinfo - view add edit-account-info - add link in sidebar

--- a/Ready2Serve/application/layouts/scripts/sidebar.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar.phtml
@@ -3,7 +3,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">View Orders</a></li>
-            <li><a href="#">Edit Account Info</a></li>
+            <li><a href="/person/edit-account-info">Edit Account Info</a></li>
             <li><a href="#">Manage Product</a></li>
           </ul>
            
