SideBar Updated 	modified:   application/controllers/AuthController.php 	modified:   application/layouts/scripts/sidebar.phtml 	modified:   application/views/scripts/order/view-all-orders.phtml

--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -1,4 +1,6 @@
 <br /><br />
+
+<html>
 <div id="view-content">
 
     <title>View All Orders</title>
@@ -35,7 +37,6 @@
                     </tr>
     <?php endforeach; ?>
 
-          
          </tbody>
             </table>
 
@@ -49,3 +50,4 @@
 
 </body>
 
+</html>
