--- a/Ready2Serve/application/layouts/scripts/sidebar.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar.phtml
@@ -7,8 +7,9 @@
           </ul>
             <ul class="nav nav-sidebar">
             <li><a href="#">Manage Product</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
+            <li><a href="">Add Product</a></li>
+            <li><a href="">Update/Edit Product</a></li>
+            <li><a href="">Delete Product</a></li>
           </ul>
            
         </div>
