--- a/Ready2Serve/application/layouts/scripts/sidebar.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar.phtml
@@ -4,12 +4,7 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="/auth/login">View Orders</a></li>
             <li><a href="/person/edit-account-info">Edit Account Info</a></li>
-          </ul>
-            <ul class="nav nav-sidebar">
-            <li><a href="#">Manage Product</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-          </ul>
+            <li><a href="/auth/logout">Logout</a></li>
            
         </div>
        
