add show all products functionality 	modified:   Ready2Serve/.zfproject.xml 	modified:   Ready2Serve/application/controllers/ProductController.php 	modified:   Ready2Serve/application/layouts/scripts/sidebar.phtml 	modified:   Ready2Serve/application/models/Product.php 	new file:   Ready2Serve/application/views/scripts/product/show-all-products.phtml

--- a/Ready2Serve/application/layouts/scripts/sidebar.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar.phtml
@@ -6,7 +6,8 @@
             <li><a href="/person/edit-account-info">Edit Account Info</a></li>
             <li><a href="">Add Product</a></li>
             <li><a href="">Update/Edit Product</a></li>
-            <li><a href="">Delete Product</a></li>
+            <li><a href="/product/show-all-products">Show All Product</a></li>
+            <li><a href="#">Delete Product</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </div>
        
