--- a/Ready2Serve/application/layouts/scripts/sidebar.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar.phtml
@@ -2,7 +2,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="/auth/login">View Orders</a></li>
+            <li class="active"><a href="/order/view-all-orders">View Orders</a></li>
             <li><a href="/person/edit-account-info">Edit Account Info</a></li>
             <li><a href="">Add Product</a></li>
             <li><a href="">Update/Edit Product</a></li>
