--- a/Ready2Serve/application/views/scripts/product/show-all-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/show-all-products.phtml
@@ -4,7 +4,7 @@
             <?php
             if ($this->result) {
                 ?>
-                <table class="table table-striped">
+                <table class="table table-striped" cellpadding="10">
                     <thead>
                         <tr>
                             <th>Product Description</th>
