--- a/Ready2Serve/application/layouts/scripts/sidebar.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar.phtml
@@ -1,6 +1,6 @@
 <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
+        <div class="col-sm-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="/order/view-all-orders">View Orders</a></li>
             <li><a href="/person/edit-account-info">Edit Account Info</a></li>
