Add Date Fields 	modified:   .zfproject.xml 	modified:   application/controllers/OrderController.php 	new file:   application/forms/ViewAllOrders.php 	modified:   application/views/scripts/order/view-all-orders.phtml 	modified:   application/views/scripts/person/edit-account-info.phtml

--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -1,13 +1,39 @@
 <br /><br />
 
 <html>
+       <head>
+      <meta charset="utf-8">
+      <title>View All Orders</title>
+      <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+      <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+      <!-- Javascript -->
+      <script>
+         $(function() {
+            $( "#datepicker-8" ).datepicker({
+               prevText:"click for previous months",
+               nextText:"click for next months",
+               showOtherMonths:true,
+               selectOtherMonths: false
+            });
+            $( "#datepicker-9" ).datepicker({
+               prevText:"click for previous months",
+               nextText:"click for next months",
+               showOtherMonths:true,
+               selectOtherMonths: true
+            });
+         });
+      </script>
+   </head>
+   <body>
+     
 <div id="view-content">
-
-    <title>View All Orders</title>
-
+  
+    
     <div class="container" align="center">
-
-
+<!--        <p>Enter Start Date: <input type="date" id="datepicker-8"></p>
+        <p>Enter End Date: <input type="date" id="datepicker-9"></p>-->
+         <?php echo $this->form; ?>
         <?php if ($this->names): ?>
  <table class="table table-striped">
               <thead>
@@ -47,7 +73,7 @@
 <?php endif; ?>
 
     </div> <!-- /container -->
-
+</div>
 </body>
 
 </html>
