--- a/Ready2Serve/application/views/scripts/product/show-all-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/show-all-products.phtml
@@ -10,7 +10,7 @@
                             <th>Product Description</th>
                             <th>Product Type</th>
                             <th>Product Price</th>
-                            <th>Product Availibility</th>
+                            <th>Product Availability</th>
                             <th>Product Orderability</th>
                         </tr>
                     </thead>
@@ -29,7 +29,7 @@
                 </table>
             <?php } else {
                 ?>
-                <p>There is no product </p>
+                <p>There is no product to Display</p>
                 <?php
             }
             ?>
