--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -59,7 +59,14 @@
 //                elseif(Zend_Auth::getInstance()->hasIdentity())
 //                    //==='Salesperson'
 //                {
+                if(Zend_Auth::getInstance()->hasIdentity()){
+                if(Zend_Auth::getInstance()->getIdentity()->person_type=='Admin'){
+                    echo $this->render('sidebar_admin.phtml');
+                }
+                else if(Zend_Auth::getInstance()->getIdentity()->person_type=='Salesperson'){
                     echo $this->render('sidebar_salesperson.phtml');
+                }
+                }
                // }
             }
             ?>
