Add Delete Product Functionality (Incomplete) 	modified:   .zfproject.xml 	modified:   application/controllers/PersonController.php     - Changed Admin and Salesperson sidebar specific conditions 	modified:   application/controllers/ProductController.php     - Added delete Products action and form 	new file:   application/forms/DeleteProducts.php      - Added delete Products action and form 	modified:   application/layouts/scripts/layout.phtml 	modified:   application/layouts/scripts/sidebar_admin.phtml 	new file:   application/views/scripts/product/delete-products.phtml     - Added view script 	modified:   application/views/scripts/product/show-all-products.phtml

--- a/Ready2Serve/application/layouts/scripts/sidebar_admin.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar_admin.phtml
@@ -37,7 +37,7 @@
                                 ->getActionName() == '#') {
                     echo "class='active'";
                 }
-                ?>><a href="#">Delete Product</a></li>
+                ?>><a href="/product/delete-products">Delete Product</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
             </ul>
       </div>
