Multiple Changes 	modified:   application/controllers/AuthController.php 	modified:   application/controllers/ProductController.php 	modified:   application/forms/DeleteProducts.php 	modified:   application/views/scripts/product/delete-products.phtml

--- a/Ready2Serve/application/views/scripts/product/delete-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/delete-products.phtml
@@ -27,8 +27,7 @@
             </tbody>
     </table>
     <?php
-    //echo $this->formRow($this->form->getElement('submit'));
-    //echo $this->form()->closeTag();
+    echo $this->form->getElement('Confirm');
     ?>
 </div>
 </div>
