Delete Product Via Zend Form

--- a/Ready2Serve/application/layouts/scripts/sidebar_admin.phtml
+++ b/Ready2Serve/application/layouts/scripts/sidebar_admin.phtml
@@ -1,5 +1,6 @@
 
 <div class="row">
+    <!--class="col-sm-2 sidebar"-->
     <div class="col-sm-2 sidebar">
         <ul class="nav nav-sidebar">
             <li <?php
