--- a/Ready2Serve/application/views/scripts/product/delete-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/delete-products.phtml
@@ -1,6 +1,7 @@
 <br /><br />
 <div id="view-content">
 <div  class="container" align="center">
+    <form class="form-signin" role="form" method="post">
     <?php
     ?>
     <table class="table table-striped">
@@ -29,5 +30,7 @@
     <?php
     echo $this->form->getElement('Confirm');
     ?>
+        </form>
+
 </div>
 </div>
