--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -45,8 +45,8 @@
                 </div>
             </div>
         </div>
-
-            <div id="sidebar" class="col-md-2">
+            <!--class="col-md-2"-->
+            <div class="col-md-2" >
             <?php
             if (Zend_Controller_Front::getInstance()->getRequest()
                             ->getControllerName() != 'Auth' &&
@@ -65,7 +65,8 @@
             }
             ?>
         </div>
-        <div id="content" class="col-md-8">
+            <!--class="col-md-8"-->
+        <div id="content" class="col-md-8" >
             <?php
             echo $this->layout()->content;
             ?>
