Delete Products Functionality Complete  modified:   application/controllers/ProductController.php 	modified:   application/forms/ViewAllOrders.php 	modified:   application/layouts/scripts/layout.phtml 	modified:   application/models/Product.php 	modified:   application/views/scripts/order/view-all-orders.phtml 	modified:   application/views/scripts/product/delete-products.phtml

--- a/Ready2Serve/application/layouts/scripts/layout.phtml
+++ b/Ready2Serve/application/layouts/scripts/layout.phtml
@@ -53,7 +53,8 @@
                             Zend_Controller_Front::getInstance()->getRequest()
                             ->getControllerName() != 'auth') {
                 if(Zend_Auth::getInstance()->hasIdentity()){
-                if(Zend_Auth::getInstance()->getIdentity()->person_type=='Admin'){
+                if(Zend_Auth::getInstance()->getIdentity()
+                        ->person_type=='Admin'){
                     echo $this->render('sidebar_admin.phtml');
                 }
                 else if(Zend_Auth::getInstance()
@@ -61,7 +62,6 @@
                     echo $this->render('sidebar_salesperson.phtml');
                 }
                 }
-               // }
             }
             ?>
         </div>
