--- a/Ready2Serve/application/views/scripts/product/delete-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/delete-products.phtml
@@ -1,16 +1,18 @@
+<html>
 <br /><br />
+<title>Delete Products</title>
 <div id="view-content">
 <div  class="container" align="center">
-    <form class="form-signin" role="form" method="post">
-    <?php
-    ?>
-    <table class="table table-striped">
+    <form role="form" method="post">
+        <body>
+    <table class="table-condensed table table-striped  ">
         <thead>
                 <tr>
                    <th>Product ID</th>
                     <th>Product Name</th>
                     <th>Product Type</th>
                     <th>Unit Price</th>
+                    <th>Product Availability</th>
                     <th>Delete Product</th>
                 </tr>
               </thead>
@@ -18,11 +20,12 @@
                <tbody>
         <?php foreach ($this->list as $key => $val): ?>
             <tr>
-                <td><?php echo $this->escape($val['product_id']); ?></td>
-                <td><?php echo $this->escape($val['product_description']); ?></td>
-                <td><?php echo $this->escape($val['product_type']); ?></td>
-                <td><?php echo $this->escape($val['product_price']); ?></td>
-                 <td><?php echo $this->form->getElement($val['product_id']); ?></td>
+                <td><?php echo $this->escape($val['product_id']) ?></td>
+                <td><?php echo $this->escape(trim($val['product_description'])) ?></td>
+                <td><?php echo $this->escape(trim($val['product_type'])) ?></td>
+                <td><?php echo $this->escape(trim($val['product_price'])) ?></td>
+                <td><?php echo $this->escape(trim($val['is_product_available'])) ?></td>
+                <td><?php echo $this->form->getElement(trim($val['product_id'])) ?></td>
             </tr>
         <?php endforeach; ?>
             </tbody>
@@ -31,6 +34,7 @@
     echo $this->form->getElement('Confirm');
     ?>
         </form>
-
+ </body>
 </div>
 </div>
+</html>
