Set Table Width to 80% 	modified:   application/views/scripts/order/view-all-orders.phtml 	modified:   application/views/scripts/product/delete-products.phtml 	modified:   application/views/scripts/product/show-all-products.phtml

--- a/Ready2Serve/application/views/scripts/product/delete-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/delete-products.phtml
@@ -5,7 +5,7 @@
 <div  class="container" align="center">
     <form role="form" method="post">
         <body>
-    <table class="table-condensed table table-striped  ">
+    <table class="table-condensed table table-striped" style="width:80%">
         <thead>
                 <tr>
                    <th>Product ID</th>
@@ -33,8 +33,9 @@
     <?php
     echo $this->form->getElement('Confirm');
     ?>
-        </form>
+        
  </body>
+ </form>
 </div>
 </div>
 </html>
