--- a/Ready2Serve/application/views/scripts/product/show-all-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/show-all-products.phtml
@@ -4,7 +4,8 @@
             <?php
             if ($this->result) {
                 ?>
-                <table class="table table-striped" cellpadding="8">
+            </br>
+                <table class="table table-striped" style="width:80%">
                     <thead>
                         <tr>
                             <th>Product Description</th>
