--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -35,7 +35,7 @@
         <p>Enter End Date: <input type="date" id="datepicker-9"></p>-->
          <?php echo $this->form; ?>
         <?php if ($this->names): ?>
- <table class="table table-striped table-condensed">
+ <table class="table table-striped table-condensed" style="width:80%">
               <thead>
                 <tr>
                    <th>Salesman Name</th>
