--- a/Ready2Serve/application/views/scripts/product/show-all-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/show-all-products.phtml
@@ -1,4 +1,5 @@
 <html>
+    <title>Show All Products</title>
     <div id="view-content">
         <div  class="container" align="center">
             <?php
