--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -1,79 +1,98 @@
 <br /><br />
 
 <html>
-       <head>
-      <meta charset="utf-8">
-      <title>View All Orders</title>
-      <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
-      <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-      <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-      <!-- Javascript -->
-      <script>
-         $(function() {
-            $( "#datepicker-8" ).datepicker({
-               prevText:"click for previous months",
-               nextText:"click for next months",
-               showOtherMonths:true,
-               selectOtherMonths: false
+    <head>
+        <meta charset="utf-8">
+        <title>View All Orders</title>
+        <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+        <!-- Javascript -->
+        <script>
+            $(function() {
+                $("#datepicker-8").datepicker({
+                    prevText: "click for previous months",
+                    nextText: "click for next months",
+                    showOtherMonths: true,
+                    selectOtherMonths: false
+                });
+                $("#datepicker-9").datepicker({
+                    prevText: "click for previous months",
+                    nextText: "click for next months",
+                    showOtherMonths: true,
+                    selectOtherMonths: true
+                });
             });
-            $( "#datepicker-9" ).datepicker({
-               prevText:"click for previous months",
-               nextText:"click for next months",
-               showOtherMonths:true,
-               selectOtherMonths: true
-            });
-         });
-      </script>
-   </head>
-   <body>
-     
-<div id="view-content">
-  
-    
-    <div class="container" align="center">
-<!--        <p>Enter Start Date: <input type="date" id="datepicker-8"></p>
-        <p>Enter End Date: <input type="date" id="datepicker-9"></p>-->
-         <?php echo $this->form; ?>
-        <?php if ($this->names): ?>
- <table class="table table-striped table-condensed" style="width:80%">
-              <thead>
-                <tr>
-                   <th>Salesman Name</th>
-                    <th>Order ID</th>
-                    <th>Product Description</th>
-                    <th>Unit Price</th>
-                    <th>Quantity</th>
-                    <th>Date</th>
-                    <th>Discount</th>
-                    <th>Amount</th>
-                </tr>
-              </thead>
-              <tbody>      
+        </script>
+    </head>
+    <body>
 
-    <?php foreach ($this->names as $key => $val): ?>
-                    <tr>
-                        <td><?php echo $this->escape($val['name']) ?></td>
-                        <td><?php echo $this->escape($val['order_id']) ?></td>
-                        <td><?php echo $this->escape($val['product_description']) ?></td>
-                        <td><?php echo $this->escape($val['unit_price']) ?></td>
-                        <td><?php echo $this->escape($val['quantity']) ?></td>
-                        <td><?php echo $this->escape($val['order_datetime']) ?></td>
-                        <td><?php echo $this->escape($val['discount']) ?></td>
-                        <td><?php echo $this->escape($val['Amount']) ?></td>
-                    </tr>
-    <?php endforeach; ?>
+        <div id="view-content">
 
-         </tbody>
-            </table>
 
-<?php else: ?>
+            <div class="container" align="center">
+        <!--        <p>Enter Start Date: <input type="date" id="datepicker-8"></p>
+                <p>Enter End Date: <input type="date" id="datepicker-9"></p>-->
+                <?php echo $this->form; ?>
+                <?php
+                $currentOrderID = 0;
+                $orderTot = 0;
+                ?>
+                <?php if ($this->names): ?>
+                    <table class="table table-striped table-condensed" style="width:80%">
+                        <thead>
+                            <?php foreach ($this->names as $key => $val) { ?>
+                                <?php
+                                if ($currentOrderID != $this->escape($val['order_id'])) {
+                                    $currentOrderID = $this->escape($val['order_id']);
+                                    ?>
 
-            <p>There are no Orders to display.</p>
+                                    <tr class="blank_row">
+                                        <td colspan="7"></td>
+                                    </tr>
+                                    <tr class="blank_row">
+                                        <td colspan="7"></td>
+                                    </tr>
+                                    <tr>  
+                                        <td colspan="7" align="center"><b><?php echo 'Order Number: ' . $currentOrderID ?></b></td>   
+                                    </tr>
 
-<?php endif; ?>
+                                    <tr>
+                                        <th>Salesman Name</th>
+                                        <th>Product Description</th>
+                                        <th>Unit Price</th>
+                                        <th>Quantity</th>
+                                        <th>Date</th>
+                                        <th>Discount</th>
+                                        <th>Amount</th>
+                                    </tr>
+                                <?php } ?>
 
-    </div> <!-- /container -->
-</div>
-</body>
+                            </thead>
+                            <tbody>      
+                                <tr>
+                                    <td><?php echo $this->escape($val['name']) ?></td>
+
+                                    <td><?php echo $this->escape($val['product_description']) ?></td>
+                                    <td><?php echo $this->escape($val['unit_price']) ?></td>
+                                    <td><?php echo $this->escape($val['quantity']) ?></td>
+                                    <td><?php echo $this->escape($val['order_datetime']) ?></td>
+                                    <td><?php echo $this->escape($val['discount']) ?></td>
+                                    <td><?php echo $this->escape($val['Amount']) ?></td>
+                                </tr>
+                            <?php } ?>
+
+                        </tbody>
+                    </table>
+
+                <?php else: ?>
+
+                    <p>There are no Orders to display.</p>
+
+                <?php endif; ?>
+
+            </div> <!-- /container -->
+        </div>
+    </body>
 
 </html>
