--- a/Ready2Serve/application/views/scripts/product/delete-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/delete-products.phtml
@@ -21,11 +21,11 @@
         <?php foreach ($this->list as $key => $val): ?>
             <tr>
                 <td><?php echo $this->escape($val['product_id']) ?></td>
-                <td><?php echo $this->escape(trim($val['product_description'])) ?></td>
-                <td><?php echo $this->escape(trim($val['product_type'])) ?></td>
-                <td><?php echo $this->escape(trim($val['product_price'])) ?></td>
-                <td><?php echo $this->escape(trim($val['is_product_available'])) ?></td>
-                <td><?php echo $this->form->getElement(trim($val['product_id'])) ?></td>
+                <td><?php echo $this->escape($val['product_description']) ?></td>
+                <td><?php echo $this->escape($val['product_type']) ?></td>
+                <td><?php echo $this->escape($val['product_price']) ?></td>
+                <td><?php echo $this->escape($val['is_product_available']) ?></td>
+                <td><?php echo $this->form->getElement($val['product_id']) ?></td>
             </tr>
         <?php endforeach; ?>
             </tbody>
