View Scripts Adjustment 	modified:   application/forms/DeleteProducts.php 	modified:   application/layouts/scripts/layout.phtml 	modified:   application/views/scripts/order/view-all-orders.phtml 	modified:   application/views/scripts/product/delete-products.phtml 	modified:   application/views/scripts/product/show-all-products.phtml

--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -30,7 +30,7 @@
         <div id="view-content">
 
 
-            <div class="container" align="center">
+            <div class="container">
         <!--        <p>Enter Start Date: <input type="date" id="datepicker-8"></p>
                 <p>Enter End Date: <input type="date" id="datepicker-9"></p>-->
                 <?php echo $this->form; ?>
