--- a/Ready2Serve/application/views/scripts/product/show-all-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/show-all-products.phtml
@@ -1,7 +1,7 @@
 <html>
     <title>Show All Products</title>
     <div id="view-content">
-        <div  class="container" align="center">
+        <div  class="container">
             <?php
             if ($this->result) {
                 ?>
