--- a/Ready2Serve/application/views/scripts/product/delete-products.phtml
+++ b/Ready2Serve/application/views/scripts/product/delete-products.phtml
@@ -1,7 +1,8 @@
 
 <br /><br />
 <div id="view-content">
-<div  class="container" align="center">
+<div  class="container">
+    <title>Delete Products</title>
     <form role="form" method="post">
         
     <table class="table" id="t1" name="t1" style="width:80%">
@@ -29,18 +30,19 @@
         <?php endforeach; ?>
             </tbody>
     </table>
+        <div align="center">
     <?php
     echo $this->form->getElement('Confirm');
     ?>
-        
+            </div>
 
  </form>
 </div>
 </div>
 
-<script src="<?php echo $this->baseUrl('/bootstrap/js/colResizable-1.3.min.js'); ?>"></script>
+<!--<script src="<?php //echo $this->baseUrl('/bootstrap/js/colResizable-1.3.min.js'); ?>"></script>
 <script type="text/javascript">
     
     $("#t1").colResizable();
     
-</script>
+</script>-->
