Refactor Place Order Code

--- a/Ready2Serve/application/views/scripts/order/place-order.phtml
+++ b/Ready2Serve/application/views/scripts/order/place-order.phtml
@@ -1,4 +1,42 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Order</b> and script/action name <b>placeOrder</b></p>
-</div>
+
+<html>
+    <div id="view-content">
+        <div  class="container" align="center">
+            <?php 
+            if ($this->form) {
+                ?>
+                <table class="table table-striped" cellpadding="8">
+                    <thead>
+                        <tr>
+                            <th>Check</th>
+                            <th>Product Description</th>
+                            <th>Product Price</th>
+                            <th>Product Quantity</th>
+                            <th>Product Discount</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <?php for ($i=0;$i<count($this->form->checkBoxArray);$i++) 
+                        { ?>
+                            <tr>
+                                <td><?php echo $this->form->checkBoxArray[$i]; ?></td>
+                                <td><?php echo $this->form->productArray[$i]; ?></td>
+                                <td><?php echo $this->form->priceArray[$i]; ?></td>
+                                <td><?php echo $this->form->quantityArray[$i]; ?></td>
+                                <td><?php echo $this->form->discountArray[$i]; ?></td>
+
+                            </tr>
+                        <?php } ?>
+                    </tbody>
+                </table>
+            <?php } else {
+                ?>
+                <p>There is no product to Display</p>
+                <?php
+            }
+            ?>
+
+        </div>
+    </div> <!-- outer div -->
+</html>
+
