--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -80,6 +80,8 @@
                                     <td><?php echo $this->escape($val['discount']) ?></td>
                                     <td><?php echo $this->escape($val['Amount']) ?></td>
                                 </tr>
+                                
+                                <?php $orderTot = $orderTot+$this->escape($val['Amount']); ?>
                             <?php } ?>
 
                         </tbody>
