Add View All Orders Total 	modified:   application/controllers/PersonController.php     - Removed Implementation of place Order action 	modified:   application/forms/PlaceOrder.php     - Code Refactored 	modified:   application/views/scripts/order/place-order.phtml 	modified:   application/views/scripts/order/view-all-orders.phtml

--- a/Ready2Serve/application/views/scripts/order/place-order.phtml
+++ b/Ready2Serve/application/views/scripts/order/place-order.phtml
@@ -2,11 +2,12 @@
 <html>
     <div id="view-content">
         <div  class="container" align="center">
+            <title>Place Order</title>
             <?php 
             if ($this->form) {
                 ?>
                 <br/>
-                <table class="table table-striped" cellpadding="8">
+                <table class="table table-striped" width=80%>
                     <thead>
                         <tr>
                             <th>Check</th>
