--- a/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
+++ b/Ready2Serve/application/views/scripts/order/view-all-orders.phtml
@@ -41,10 +41,20 @@
                 <?php if ($this->names): ?>
                     <table class="table table-striped table-condensed" style="width:80%">
                         <thead>
-                            <?php foreach ($this->names as $key => $val) { ?>
-                                <?php
+                            <?php
+                            foreach ($this->names as $key => $val) {
+
                                 if ($currentOrderID != $this->escape($val['order_id'])) {
+                                    if ($currentOrderID != 0) {
+                                        ?>
+                                        <tr class="blank_row">
+                                            <td colspan="7"><b><?php echo 'Order Total: ' . $orderTot ?></b></td>
+                                        </tr>
+                                    <?php
+                                    }
                                     $currentOrderID = $this->escape($val['order_id']);
+
+                                    $orderTot = $this->escape($val['Amount']);
                                     ?>
 
                                     <tr class="blank_row">
@@ -66,7 +76,11 @@
                                         <th>Discount</th>
                                         <th>Amount</th>
                                     </tr>
-                                <?php } ?>
+                                    <?php
+                                } else {
+                                    $orderTot = $orderTot + $this->escape($val['Amount']);
+                                }
+                                ?>
 
                             </thead>
                             <tbody>      
@@ -80,18 +94,18 @@
                                     <td><?php echo $this->escape($val['discount']) ?></td>
                                     <td><?php echo $this->escape($val['Amount']) ?></td>
                                 </tr>
+
                                 
-                                <?php $orderTot = $orderTot+$this->escape($val['Amount']); ?>
-                            <?php } ?>
+    <?php } ?>
 
                         </tbody>
                     </table>
 
-                <?php else: ?>
+<?php else: ?>
 
                     <p>There are no Orders to display.</p>
 
-                <?php endif; ?>
+<?php endif; ?>
 
             </div> <!-- /container -->
         </div>
