--- a/Ready2Serve/application/views/scripts/order/place-order.phtml
+++ b/Ready2Serve/application/views/scripts/order/place-order.phtml
@@ -2,7 +2,13 @@
 <html>
     <div id="view-content">
         <div  class="container" align="center">
+            
             <title>Place Order</title>
+            <?php 
+            
+$this->headScript()->appendFile($this->baseUrl('/assets/js/placeOrder.js'));
+//$this->headScript()->offsetSetFile(1, $this->baseUrl('/assets/js/placeOrder.js'));
+?>
             <?php 
             if ($this->form) {
                 ?>
@@ -40,5 +46,5 @@
 
         </div>
     </div> <!-- outer div -->
+    
 </html>
-
